Fixed image overlap issue.

--- a/src/style.css
+++ b/src/style.css
@@ -94,8 +94,6 @@ p {
 
 .img-fluid {
   border-radius: 8px;
-  max-width: 400px;
-  height: auto;
   box-shadow: 2px 3px 3px rgb(0, 0, 0, 0.2);
 }
 
@@ -108,10 +106,14 @@ p {
 }
 
 .content-container {
-  margin: 30px;
+  padding: 60px 20px;
 }
 
-@media (max-width: 991px) {
+.content {
+  margin: 20px;
+}
+
+@media (max-width: 900px) {
   h1 {
     font-size: 40px;
   }
